--- a/templates/new_door/unit_overview.html
+++ b/templates/new_door/unit_overview.html
@@ -143,7 +143,7 @@
               <td>{{ unit.size }}</td>
               <td>{{ unit.size }}</td>
               <td class="text-right">
-                <a href="#" class="d-inline">
+                <a href="#" class="d-inline" title="Renewal">
                   <i
                     class="material-icons"
                     style="
@@ -157,7 +157,7 @@
                   <div class="ripple-container"></div>
                 </a>
 
-                <a href="#" class="d-inline">
+                <a href="#" class="d-inline" title="Maintenance">
                   <i
                     class="material-icons"
                     style="
