--- a/templates/new_door/update_property.html
+++ b/templates/new_door/update_property.html
@@ -89,7 +89,7 @@
                   "
                 />
                 <a
-                  href=""
+                  href="{% url 'property_overview' property.entity.entity_name %}"
                   class="btn btn-info btn-round float-right"
                   style="margin-bottom: 20px; margin-top: 20px"
                 >
