--- a/templates/new_door/add_payment_mode.html
+++ b/templates/new_door/add_payment_mode.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block title %} PayMode_Type {% endblock title %} {% block body %} {% load static %}
+{% extends 'base.html' %} {% load static %} {% block title %} PayMode_Type {% endblock title %} {% block body %} 
 <div class="col-md-12">
   <form
     id="TypeValidation"
@@ -83,8 +83,8 @@
                     </tr>
                   </thead>
                   <tbody>
-                    {% if payment_modes %} {% for payment_mode in payment_modes
-                    %}
+                    {% if payment_modes %} 
+                    {% for payment_mode in payment_modes %}
                     <tr>
                       <td scope="row">{{payment_mode.pk}}</td>
                       <td>{{payment_mode.pay_type}}</td>
