--- a/templates/new_door/view_category_type.html
+++ b/templates/new_door/view_category_type.html
@@ -13,7 +13,7 @@
       <br />
       <div class="row">
         <div class="col-md-12">
-          <h4 class="alert alert-info">Update Category Type</h4>
+          <h4 class="alert alert-info">View Category Type</h4>
           <form action="" method="post">
             {% csrf_token %}
             <div class="card-body">
@@ -57,22 +57,12 @@
               </div>
             </div>
             <div class="modal-footer">
-              <input
-                type="submit"
-                class="btn btn-success btn-round float-right"
-                value="Update"
-                style="
-                  margin-right: 13px;
-                  margin-bottom: 20px;
-                  margin-top: 20px;
-                "
-              />
               <a
                 href="{% url 'add_category_type'%}"
                 class="btn btn-info btn-round float-right"
                 style="margin-bottom: 20px; margin-top: 20px"
               >
-                Close
+                Back
               </a>
             </div>
           </form>
