--- a/templates/new_door/property_overview.html
+++ b/templates/new_door/property_overview.html
@@ -131,7 +131,7 @@
                 <td>{{property.property_name}}</td>
                 <td>{{property.address1}}</td>
                 <td>{{property.city}}</td>
-                <td>{{property.country}}</td>
+                <td>{{property.get_country_display }}</td>
                 <td>
                   <div
                     class="progress progress-line-primary"
