--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -102,7 +102,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/Add_User">
+              <a class="nav-link" href="{% url 'add_user' %}">
                 <span class="sidebar-mini"> RS </span>
                 <span class="sidebar-normal"> Add User </span>
               </a>
