--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,6 @@
       {% include 'footer.html' %}
    
     </div>
-
     <!--   Core JS Files start from here   -->
     <script src="{% static 'js/core/jquery.min.js' %}"></script>
     <script src="{% static 'js/core/popper.min.js' %}"></script>
@@ -517,5 +516,9 @@
     </script>
 
     {% comment %} Core JS Files END from here {% endcomment %}
+    <!-- Custom javaScript -->
+
+    {% block occupancy_type %}{% endblock %}
+      
   </body>
 </html>
