added invite user to unit

--- a/templates/new_door/add_user.html
+++ b/templates/new_door/add_user.html
@@ -64,7 +64,7 @@
                 <input type="hidden" /><input
                   type="file"
                   id="usrimg"
-                  name="{{  }}"
+                  name=""
                 />
                 <div class="ripple-container"></div>
               </span>
