--- a/templates/new_door/dashboard.html
+++ b/templates/new_door/dashboard.html
@@ -32,7 +32,7 @@
         <div class="card-icon">
           <i class="material-icons">home</i>
         </div>
-        <h3 class="card-title">2450</h3>
+        <h3 class="card-title">{{ total_num_units }}</h3>
         <br /><br />
         <b class="card-category">Total Units</b>
       </div>
@@ -44,7 +44,7 @@
         <div class="card-icon">
           <i class="material-icons">vpn_key</i>
         </div>
-        <h3 class="card-title">890</h3>
+        <h3 class="card-title">{{ vacant_units }}</h3>
         <br /><br />
         <b class="card-category">Total Vacant</b>
       </div>
