added new formula

--- a/templates/base.html
+++ b/templates/base.html
@@ -518,7 +518,7 @@
     {% comment %} Core JS Files END from here {% endcomment %}
     <!-- Custom javaScript -->
 
-    {% block occupancy_type %}{% endblock %}
+    {% block occupancy %}{% endblock %}
       
   </body>
 </html>
