--- a/templates/new_door/unit_overview.html
+++ b/templates/new_door/unit_overview.html
@@ -242,7 +242,8 @@
   <!--  end card  -->
 </div>
 <!-- end row -->
-{% endblock %} {% block occupancy_type %}
+{% endblock %} 
+{% block occupancy %}
 <script>
   const occupancyTypes = document.querySelectorAll(".occupancy_type");
   addColorToButtons();
