--- a/templates/new_door/property_overview.html
+++ b/templates/new_door/property_overview.html
@@ -143,7 +143,8 @@
                       aria-valuenow="60"
                       aria-valuemin="0"
                       aria-valuemax="100"
-                      style="width: 80%"
+                      title="{{ percentage }}%"
+                      style="width: {{ percentage }}%"
                     >
                       <span class="sr-only">60% Complete</span>
                     </div>
