--- a/templates/new_door/property_overview.html
+++ b/templates/new_door/property_overview.html
@@ -140,13 +140,13 @@
                     <div
                       class="progress-bar progress-bar-primary"
                       role="progressbar"
-                      aria-valuenow="60"
+                      aria-valuenow="{{ percentage }}"
                       aria-valuemin="0"
                       aria-valuemax="100"
                       title="{{ percentage }}%"
                       style="width: {{ percentage }}%"
                     >
-                      <span class="sr-only">60% Complete</span>
+                      <span class="sr-only">{{ percentage }}% Complete</span>
                     </div>
                   </div>
                 </td>
