--- a/templates/new_door/property_all_overview.html
+++ b/templates/new_door/property_all_overview.html
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-md-12">
     <!-- **************Mini Dashbar************************************************** -->
-    <!-- <div class="row">
+    <div class="row">
       <div class="col-lg-3 col-md-6 col-sm-6">
         <div
           class="card card-stats"
@@ -14,7 +14,7 @@
             <div class="card-icon">
               <i class="material-icons">account_balance_wallet</i>
             </div>
-            <h3 class="card-title">${{ total.earnings }}</h3>
+            <h3 class="card-title">$985456</h3>
             <br /><br />
             <p class="card-category">Total Earnings</p>
           </div>
@@ -71,7 +71,7 @@
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
     <div class="card">
       <div class="card-header card-header-primary card-header-icon">
         <div class="card-icon" style="padding-left: 1px">
@@ -91,12 +91,12 @@
             background: rgb(224, 79, 115);
           "
         >
-          <a
-            href=" {% url 'add_property_all' %} "
+          <!-- <a
+            href=""
             class="card-header card-header-rose card-header-text"
           >
             <i class="material-icons">add</i>Add Property
-          </a>
+          </a> -->
         </div>
       </div>
       <div class="card-body">
@@ -114,11 +114,10 @@
             <thead>
               <tr>
                 <th>Owner Name</th>
-                <th>Entity Name</th>
                 <th>Property Name</th>
-                <th>Address</th>
-                <th>City</th>
-                <th>Country</th>
+                <th>Total Earnings</th>
+                <th>Total Dues</th>
+                <th>Total Units</th>
                 <th>Occupancy Graph</th>
                 <th class="disabled-sorting text-right">Actions</th>
               </tr>
@@ -126,26 +125,27 @@
             <tbody>
               {% if properties %} {% for property in properties %}
               <tr>
-                <td>{{property.owner_name}}</td>
-                <td>{{property.entity.entity_name}}</td>
+                <td>{{ property.owner_name }}</td>
                 <td>{{property.property_name}}</td>
-                <td>{{property.address1}}</td>
-                <td>{{property.city}}</td>
-                <td>{{property.get_country_display}}</td>
+                <td><b>$</b>676,576.7-demo</td>
+                <td><b>$</b>235,767-demo</td>
+                <td class="text-center">{{ number_of_units }}</td>
                 <td>
                   <div
                     class="progress progress-line-primary"
-                    style="width: 70px; height: 10px; border-radius: 30px"
+                    title="{{ number_of_vacant_units }} / {{ number_of_units}} Vacant"
+                    style="margin: 0;width: 90%; height: 10px; border-radius: 30px; background:rgb(8, 158, 8)"
                   >
                     <div
-                      class="progress-bar progress-bar-primary"
+                      class="progress-bar progress-bar-danger"
                       role="progressbar"
-                      aria-valuenow="60"
+                      aria-valuenow="{{ percentage }}"
                       aria-valuemin="0"
                       aria-valuemax="100"
-                      style="width: 40%"
+                      title="{{ number_of_occupied_units }} / {{ number_of_units }} Occupied"
+                      style="width: {{ percentage }}%"
                     >
-                      <span class="sr-only">60% Complete</span>
+                      <span class="sr-only">{{ percentage }}% Complete</span>
                     </div>
                   </div>
                 </td>
@@ -168,7 +168,7 @@
                   </a>
 
                   <a href="" class="d-inline" title="View location">
-           
+                    
                     <i
                       class="material-icons"
                       style="
@@ -184,8 +184,10 @@
 
                   <a
                     href="{% url 'view_property' property.pk %}"
-                    class="d-inline" title="View property" rel="tooltip "
-                    data-original-title="Remove "
+                    class="d-inline"
+                    rel="tooltip "
+                    data-original-title="Remove"
+                     title="View property"
                     >
                     <div class="ripple-container success"></div>
                     <i
@@ -202,7 +204,8 @@
 
                   <a
                     href="{% url 'update_property' property.pk  %}"
-                    class="d-inline" title="Update property"
+                   title="Update property"
+                    class="d-inline"
                     >
                     <div class="ripple-container success"></div>
                     <i
@@ -219,8 +222,10 @@
 
                   <a
                     href="{% url 'delete_property' property.pk  %}"
-                    class="d-inline" title="Delete property"
+                    title="Delete property"
+                    class="d-inline"
                   >
+                    
                     <i
                       class="material-icons"
                       style="
