--- a/templates/new_door/property_overview.html
+++ b/templates/new_door/property_overview.html
@@ -135,15 +135,16 @@
                 <td>
                   <div
                     class="progress progress-line-primary"
-                    style="width: 70px; height: 10px; border-radius: 30px"
+                    title="{{ number_of_vacant_units }} / {{ number_of_units}} Vacant"
+                    style="margin: 0;width: 100%; height: 10px; border-radius: 30px; background:rgb(8, 158, 8)"
                   >
                     <div
-                      class="progress-bar progress-bar-primary"
+                      class="progress-bar progress-bar-danger"
                       role="progressbar"
                       aria-valuenow="{{ percentage }}"
                       aria-valuemin="0"
                       aria-valuemax="100"
-                      title="{{ percentage }}%"
+                      title="{{ number_of_occupied_units }} / {{ number_of_units }} Occupied"
                       style="width: {{ percentage }}%"
                     >
                       <span class="sr-only">{{ percentage }}% Complete</span>
