--- a/templates/new_door/property_unit_overview.html
+++ b/templates/new_door/property_unit_overview.html
@@ -125,9 +125,8 @@
               <td>{{unit.id}}</td>
               <td>{{unit.property_type.property_type}}</td>
               <td>
-                {% if unit.occupancy_type.occupancy_type.lower == 'invite user' %}
-                
-                <a href="{% url 'add_user' %}"
+                {% if unit.occupancy_type.occupancy_type.lower == 'invite user' %}                
+                <a href="{% url 'add_tenant_to_unit' unit.pk %}"
                   class="btn btn-primary btn-round occupancy_type"
                 >
                   {{ unit.occupancy_type.occupancy_type }}
@@ -262,18 +261,23 @@
           occupancyType.style.backgroundColor = "red";
           break;
 
-        case "invite user":
-          occupancyType.style.backgroundColor = "green";
+        case "user verification pending":
+          occupancyType.style.backgroundColor = "greenyellow";
+          occupancyType.style.color = "black";
           break;
+          
         case "document pending":
           occupancyType.style.backgroundColor = "yellow";
           break;
+
         case "document review":
           occupancyType.style.backgroundColor = "#000";
           break;
+
         case "document approved":
           occupancyType.style.backgroundColor = "#000";
           break;
+          
         case "payment pending":
           occupancyType.style.backgroundColor = "#000";
           break;
