--- a/templates/new_door/unit_overview.html
+++ b/templates/new_door/unit_overview.html
@@ -126,10 +126,9 @@
               <td>{{unit.id}}</td>
               <td>{{unit.property_type.property_type}}</td>
               <td>
-                
-                {% if unit.occupancy_type.occupancy_type.lower == 'invite user' %}
-                
-                <a href="{% url 'add_user' %}"
+                {% if unit.occupancy_type.occupancy_type.lower == 'vacant' %}
+                <a
+                  href="{% url 'add_tenant_to_unit' unit.pk %}"
                   class="btn btn-primary btn-round occupancy_type"
                 >
                   {{ unit.occupancy_type.occupancy_type }}
@@ -141,7 +140,7 @@
                 {% endif %}
               </td>
               <td>
-                {{ unit.property_id.owner_name.user.username.capitalize }}
+                {{ unit.tenantcontract }}
               </td>
               <td>{{ unit.size }}</td>
               <td>{{ unit.size }}</td>
@@ -242,8 +241,7 @@
   <!--  end card  -->
 </div>
 <!-- end row -->
-{% endblock %} 
-{% block occupancy %}
+{% endblock %} {% block occupancy %}
 <script>
   const occupancyTypes = document.querySelectorAll(".occupancy_type");
   addColorToButtons();
@@ -254,26 +252,30 @@
 
       switch (occupancyTypeText) {
         case "vacant":
-          occupancyType.style.backgroundColor = "greenyellow";
-          occupancyType.style.color = "black";
+          occupancyType.style.backgroundColor = "green";
           break;
 
         case "occupied":
           occupancyType.style.backgroundColor = "red";
           break;
 
-        case "invite user":
-          occupancyType.style.backgroundColor = "green";
+        case "user verification pending":
+          occupancyType.style.backgroundColor = "greenyellow";
+          occupancyType.style.color = "black";
           break;
+
         case "document pending":
-          occupancyType.style.backgroundColor = "yellow";
+          occupancyType.style.backgroundColor = "pink";
           break;
+
         case "document review":
           occupancyType.style.backgroundColor = "#000";
           break;
+
         case "document approved":
           occupancyType.style.backgroundColor = "#000";
           break;
+
         case "payment pending":
           occupancyType.style.backgroundColor = "#000";
           break;
